oprava cesty k images

--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
 
         <div class="flex-container">
             <div>
-            <image src="/images/small1.jpg"  width="500" height="300"/>
+            <image src="./images/small1.jpg"  width="500" height="300"/>
             <p>ddd</p>
             </div>
             <div>
-            <image src="/images/small2.jpg"  width="500" height="300"/>
+            <image src="./images/small2.jpg"  width="500" height="300"/>
             <p>ddd</p>
             </div>
-            <image src="/images/small3.jpg"  width="500" height="300"/>
+            <image src="./images/small3.jpg"  width="500" height="300"/>
             <p>ddd</p>
-            <image src="/images/small4.jpg"  width="500" height="300"/>
-            <image src="/images/small5.jpg"  width="500" height="300"/>
-            <image src="/images/small6.jpg"  width="500" height="300"/>
+            <image src="./images/small4.jpg"  width="500" height="300"/>
+            <image src="./images/small5.jpg"  width="500" height="300"/>
+            <image src="./images/small6.jpg"  width="500" height="300"/>
         </div>
     </body>
 </html>
